@@ -45,7 +45,7 @@ public class TestInterceptorUtil {
     public static <T extends Interceptor> @NotNull T getIsolatedInterceptor(
             final @NotNull Class<T> type,
             final @NotNull TemporaryFolder temporaryFolder) throws Exception {
-        return getIsolatedInterceptors(List.of(type), temporaryFolder).get(0);
+        return getIsolatedInterceptors(List.of(type), temporaryFolder).getFirst();
     }
 
     public static <T extends Interceptor> @NotNull List<T> getIsolatedInterceptors(
